--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -42,7 +42,7 @@
 |`ServerConnectionInfo` |Параметры соединения с сервером.
 |`xref:Entities/StartBusinessProcessErrorInfo_CL.adoc[StartBusinessProcessErrorInfo]` |Представляет содержимое ошибки запуска бизнес-процесса.
 |`xref:Entities/TaskStopExecutionInfo_CL.adoc[TaskStopExecutionInfo]` |Представляет содержимое ошибки остановки исполнения задания.
-|`xref:Entities/TaskCopyResultsOptions_CL.adoc[TaskCopyResultsOptions]` |Предоставляет параметры переноса отчета об исполнении подчиненного задания в родительское.
+|`xref:Entities/TaskCopyResultsOptions_CL.adoc[TaskCopyResultsOptions]` |Предоставляет параметры переноса отчёта об исполнении подчиненного задания в родительское.
 |`TaskTreeNodeInfo` |Содержит параметры узла дерева заданий.
 |`UserProfileCardSettings` |Возвращает параметры цветовой схемы по умолчанию для {wincl}а.
 |`VersionedFileEventArgs` |Поставляет данные для событий `CheckedInFile`.
