--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/KindSetting_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/KindSetting_NS.adoc
@@ -26,7 +26,7 @@
 |`TaskAutoCompletionSetting` |Параметры автоматического завершения задания при завершении подчиненных заданий.
 |`TaskChildCopySetting` |Список полей, значение которых будет скопировано из родительского задания в подчиненное при создании.
 |`TaskChildKindSetting` |Предоставляет дерево видов подчиненных заданий.
-|`TaskCompletionMainSetting` |Определяет необходимость отправки отчета, и обязательность добавления файла отчета.
+|`TaskCompletionMainSetting` |Определяет необходимость отправки отчёта, и обязательность добавления файла отчёта.
 |`TaskCompletionParameterItemSetting` |Предоставляет поля, обязательные для заполнения при завершении задания.
 |`TaskCompletionParametersSetting` |Предоставляет настройки вариантов завершения задания, отображаемых на ленте.
 |`TaskCompletionSetting` |Содержит ссылки на типы, определяющие все настройки завершение задания.
