--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/TaskSetting_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/TaskSetting_CL.adoc
@@ -26,7 +26,7 @@ public sealed class TaskSetting : ContextualPropertyObject
 |`GroupChildKind` |Возвращает настройки создания подчиненного задания.
 |`OperationSignatures` |Возвращает настройки подписания операций.
 |`Performing` |Возвращает настройки выбора исполнителей.
-|`Reference` |Возвращает настройки типов ссылок для основного документа, дополнений и отчетов.
+|`Reference` |Возвращает настройки типов ссылок для основного документа, дополнений и отчётов.
 |`Rejection` |Возвращает настройки отправки комментария при отклонении задания.
 |`Routing` |Возвращает настройки маршрутизации.
 |`UseAsContainer` |Задаёт или возвращает признак использования карточки задания в виде контейнера для отображения вложенных карточек. При открытии задания, вместо него открывается вложенная карточка.
