--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/TaskCopyResultsOptions_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/TaskCopyResultsOptions_CL.adoc
@@ -1,6 +1,6 @@
 = TaskCopyResultsOptions -- класс
 
-Предоставляет параметры переноса отчета об исполнении подчиненного задания в родительское.
+Предоставляет параметры переноса отчёта об исполнении подчиненного задания в родительское.
 
 * *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -26,6 +26,6 @@ public sealed class TaskCopyResultsOptions
 |===
 |Имя |Описание
 |`CopyReferences` |Задаёт или возвращает признак необходимости копировать ссылки.
-|`CopyReport` |Задаёт или возвращает признак необходимости копировать отчет.
+|`CopyReport` |Задаёт или возвращает признак необходимости копировать отчёт.
 |`References` |Возвращает список ссылок для переноса.
 |===
