--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.GetTaskAcceptanceMailNotificationInfo_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.GetTaskAcceptanceMailNotificationInfo_MT.adoc
@@ -1,6 +1,6 @@
 = ITaskService.GetTaskAcceptanceMailNotificationInfo -- метод (Task, String)
 
-Возвращает письмо, подготовленное для отправки, с информацией о передаче задания на приемку.
+Возвращает письмо, подготовленное для отправки, с информацией о передаче задания на приёмку.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -34,5 +34,5 @@ taskCardUrl:::
 |===
 |Исключение |Условие
 |`http://msdn.microsoft.com/ru-ru/library/system.argumentnullexception.aspx[System.ArgumentNullException]` |Ошибка возвращается в случае, если не задан параметр `task` или `taskCardUrl`.
-|`https://msdn.microsoft.com/ru-ru/library/system.notsupportedexception.aspx[System.PlatformNotSupportedException]` |Ошибка возвращается в случае, если задание не находится в состоянии "На приемке".
+|`https://msdn.microsoft.com/ru-ru/library/system.notsupportedexception.aspx[System.PlatformNotSupportedException]` |Ошибка возвращается в случае, если задание не находится в состоянии "На приёмке".
 |===
