--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService_IN.adoc
@@ -17,7 +17,7 @@ public interface ITaskService
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`xref:ITaskService.AcceptTask_MT.adoc[AcceptTask(Task)]` |Приемка указанного задания.
+|`xref:ITaskService.AcceptTask_MT.adoc[AcceptTask(Task)]` |приёмка указанного задания.
 |`xref:ITaskService.AddChildCopyField_MT.adoc[AddChildCopyField(Task)]` |Добавляет в настройки задания параметры копирования поля из родительского задания в дочернее.
 |`xref:ITaskService.AddChildKindSettings_MT.adoc[AddChildKindSettings(KindsCardKind, ObjectCollection<TaskPresetChildKindSetting>, Boolean)]` |Добавляет в переданную коллекцию настроек вид, доступный для выбора при создании подчинённого задания.
 |`xref:ITaskService.AddComment_1_MT.adoc[AddComment(Task, StaffEmployee, String)]` |Добавляет комментарий в указанное задание.
@@ -63,7 +63,7 @@ public interface ITaskService
 |`xref:ITaskService.GetLastDelegate_MT.adoc[GetLastDelegate(Task)]` |Возвращает последнюю запись списка делегирования.
 |`xref:ITaskService.GetLastDelegate_1_MT.adoc[GetLastDelegate(Task, Boolean)]` |Возвращает последнюю запись списка делегирования.
 |`xref:ITaskService.GetSelectedPerformers_MT.adoc[GetSelectedPerformers(Task)]` |Возвращает выбранных исполнителей задания.
-|`xref:ITaskService.GetTaskAcceptanceMailNotificationInfo_MT.adoc[GetTaskAcceptanceMailNotificationInfo(Task, String)]` |Возвращает письмо, подготовленное для отправки, с информацией о передаче задания на приемку.
+|`xref:ITaskService.GetTaskAcceptanceMailNotificationInfo_MT.adoc[GetTaskAcceptanceMailNotificationInfo(Task, String)]` |Возвращает письмо, подготовленное для отправки, с информацией о передаче задания на приёмку.
 |`xref:ITaskService.GetTaskBuiltInState_MT.adoc[GetTaskBuiltInState(Task)]` |Получает для задания встроенное состояние.
 |`xref:ITaskService.GetTaskCompletionMailNotificationInfo_MT.adoc[GetTaskCompletionMailNotificationInfo(Task, String)]` |Возвращает письмо, подготовленное для отправки, с информацией о завершении задания.
 |`xref:ITaskService.GetTaskRejectionMailNotificationInfo_MT.adoc[GetTaskRejectionMailNotificationInfo(Task, String)]` |Возвращает письмо, подготовленное для отправки, с информацией об отклонении задания.
