--- a/modules/BackOffice-ObjectModel-Task/pages/TaskGroupPresets_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/TaskGroupPresets_CL.adoc
@@ -28,8 +28,8 @@ public class TaskGroupPresets : BaseCardSectionRow
 |`Laboriousness` |Задаёт или возвращает трудоемкость (в часах) исполнения задания.
 |`Reminder` |Задаёт или возвращает количество часов, предшествующих сроку выполнения задания, когда исполнителю будет выдано соответствующее информационное сообщение.
 |`ReminderDate` |Задаёт или возвращает дату, при наступлении которой исполнителю будет выдано информационное сообщение о приближении срока выполнения задания.
-|`ReportFileRequired` |Задаёт или возвращает признак того, что при завершении задания необходимо добавить файл отчета.
-|`ReportRequired` |Задаёт или возвращает признак того, что при завершении задания необходимо ввести отчет.
+|`ReportFileRequired` |Задаёт или возвращает признак того, что при завершении задания необходимо добавить файл отчёта.
+|`ReportRequired` |Задаёт или возвращает признак того, что при завершении задания необходимо ввести отчёт.
 |`RequestCommentAtTaskRejection` |Задаёт или возвращает признак того, что необходимо запрашивать комментарий при отклонении задания.
 |`RoutingType` |Задаёт или возвращает тип маршрутизации задания.
 |`SeparateTasks` |Задаёт или возвращает признак того, что для каждого исполнителя будет создано отдельное задание.
@@ -55,5 +55,5 @@ public class TaskGroupPresets : BaseCardSectionRow
 |`ReminderDateProperty` |Определяет свойство "Дата напоминания".
 |`ReminderProperty` |Определяет свойство "Напомнить за N часов до срока завершения задания".
 |`ReportFileRequiredProperty` |Определяет свойство "Запрашивать файл отчёта".
-|`ReportRequiredProperty` |Определяет свойство "Ввести отчет".
+|`ReportRequiredProperty` |Определяет свойство "Ввести отчёт".
 |===
