--- a/modules/BackOffice-ObjectModel-Task/pages/TaskMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/TaskMainInfo_CL.adoc
@@ -47,8 +47,8 @@ public class TaskMainInfo : BaseCardSectionRow
 |`ReferenceList` |Задаёт или возвращает список ссылок для текущего задания.
 |`Reminder` |Задаёт или возвращает количество часов до окончания срока исполнения задания, за которые будет отправлено напоминание.
 |`ReminderDate` |Задаёт или возвращает дату напоминания о выполнении задания.
-|`Report` |Задаёт или возвращает содержимое отчета исполнителя.
-|`RequiresAcceptance` |Задаёт или возвращает признак того, что заданию требуется приемка.
+|`Report` |Задаёт или возвращает содержимое отчёта исполнителя.
+|`RequiresAcceptance` |Задаёт или возвращает признак того, что заданию требуется приёмка.
 |`ResponsibleTaskId` |Задаёт или возвращает идентификатор задания ответственного исполнителя.
 |`ResponsibleTaskPerformerId` |Задаёт или возвращает идентификатор ответственного сотрудника.
 |`SelectedPerformers` |Задаёт список назначенных исполнителей.
@@ -95,8 +95,8 @@ public class TaskMainInfo : BaseCardSectionRow
 |`ReferenceListProperty` |Список ссылок.
 |`ReminderDateProperty` |Дата напоминания о выполнении задания.
 |`ReminderProperty` |Количество часов до окончания срока исполнения задания, за которые будет отправлено напоминание.
-|`ReportProperty` |Содержимое отчета исполнителя.
-|`RequiresAcceptanceProperty` |Требуется приемка.
+|`ReportProperty` |Содержимое отчёта исполнителя.
+|`RequiresAcceptanceProperty` |Требуется приёмка.
 |`ResponsibleTaskIdProperty` |Идентификатор задания ответственного исполнителя.
 |`ResponsibleTaskPerformerIdProperty` |Идентификатор ответственного сотрудника.
 |`SelectedPerformersProperty` |Список назначенных исполнителей.
