--- a/modules/BackOffice-ObjectModel-Task/pages/TaskPreset_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/TaskPreset_CL.adoc
@@ -29,7 +29,7 @@ public sealed class TaskPreset : BaseCardSectionRow
 |`GroupChildKind` |Возвращает настройки видов подчиненной группы заданий.
 |`Initialized` |Задаёт или возвращает признак того, что настройки были проинициализированы.
 |`MainLinkTypes` |Возвращает коллекцию типов ссылок для основного документа.
-|`ReportLinkTypes` |Возвращает коллекцию типов ссылок для отчета.
+|`ReportLinkTypes` |Возвращает коллекцию типов ссылок для отчёта.
 |`RequestCommentAtTaskRejection` |Запрашивать комментарий при отклонении задания.
 |`Routing` |Возвращает тип маршрутизации задания.
 |`UseBusinessCalendar` |Задаёт или возвращает признак использования бизнес-календаря.
