--- a/modules/BackOffice-ObjectModel-Task/pages/Task_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/Task_CL.adoc
@@ -30,16 +30,16 @@ public class Task : BaseCard
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`AcceptanceState` |Представляет состояние "На приемке".
-|`AcceptanceToCompletedByAccept` |Представляет переход "Приемка -- Завершено".
-|`AcceptanceToNotAcceptedByTakeToRework` |Представляет переход "Приемка -- На доработке".
-|`AcceptanceToRecalledByRecall` |Представляет переход "Приемка -- Отозвано".
-|`AcceptOperation` |Операция приемки.
+|`AcceptanceState` |Представляет состояние "На приёмке".
+|`AcceptanceToCompletedByAccept` |Представляет переход "приёмка -- Завершено".
+|`AcceptanceToNotAcceptedByTakeToRework` |Представляет переход "приёмка -- На доработке".
+|`AcceptanceToRecalledByRecall` |Представляет переход "приёмка -- Отозвано".
+|`AcceptOperation` |Операция приёмки.
 |`ActualDelegatesProperty` |Определяет свойство "Актуальные делегаты".
 |`AddAttachmentOperation` |Операция добавления дополнения.
 |`AddCommentOperation` |Операция добавления комментария.
 |`AddMainDocumentOperation` |Операция добавления основного документа.
-|`AddReportOperation` |Операция добавления отчета.
+|`AddReportOperation` |Операция добавления отчёта.
 |`CancelDelegationOperation` |Операция отмены делегирования.
 |`ChangeCurrentPerformerOperation` |Операция изменения текущего исполнителя.
 |`ChangeExecutionDateOperation` |Операция изменения срока исполнения.
@@ -102,9 +102,9 @@ public class Task : BaseCard
 |`RemoveChildTaskGroupOperation` |Операция удаления подчиненной группы заданий.
 |`RemoveChildTaskOperation` |Операция удаления подчинённого задания.
 |`RemoveMainDocumentOperation` |Операция удаления основного документа.
-|`RemoveReportOperation` |Операция удаления отчета.
+|`RemoveReportOperation` |Операция удаления отчёта.
 |`ReturnFromTheDelegationState` |Представляет состояние "Возврат с делегирования".
-|`ReturnFromTheDelegationToAcceptanceByComplete` |Представляет переход "Возврат с делегирования -- На приемке".
+|`ReturnFromTheDelegationToAcceptanceByComplete` |Представляет переход "Возврат с делегирования -- На приёмке".
 |`ReturnFromTheDelegationToCompletedByComplete` |Представляет переход "Возврат с делегирования -- Завершено".
 |`ReturnFromTheDelegationToInWorkByTakeToWork` |Представляет переход "Возврат с делегирования -- В работе".
 |`ReturnFromTheDelegationToRecalledByRecall` |Представляет переход "Возврат с делегирования -- Отозвано".
@@ -116,7 +116,7 @@ public class Task : BaseCard
 |`StartedState` |Представляет состояние "Начато".
 |`StopExecutionOperation` |Операция прекращения исполнения.
 |`TakeToReworkOperation` |Операция отправки на доработку.
-|`TakeToWorkOperation` |Операция приемки в работу.
+|`TakeToWorkOperation` |Операция приёмки в работу.
 |===
 
 == Примеры
