--- a/modules/Platform-ObjectManager-UserSession/pages/UserSession.ReportManager_PR.adoc
+++ b/modules/Platform-ObjectManager-UserSession/pages/UserSession.ReportManager_PR.adoc
@@ -1,6 +1,6 @@
 = UserSession.ReportManager -- свойство
 
-Предоставляет _менеджер_ для работы с хранимыми процедурами (отчетами).
+Предоставляет _менеджер_ для работы с хранимыми процедурами (отчётами).
 
 * *Пространство имён:* `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
@@ -15,4 +15,4 @@ public abstract ReportManager ReportManager { get; }
 Значение свойства::
 Тип: `xref:Platform-ObjectManager-Report:ReportManager_CL.adoc[ReportManager]`
 +
-Менеджер отчетов
+Менеджер отчётов
