--- a/modules/Platform-ObjectManager-UserSession/pages/UserSession_CL.adoc
+++ b/modules/Platform-ObjectManager-UserSession/pages/UserSession_CL.adoc
@@ -29,7 +29,7 @@ public abstract class UserSession : IDisposable
 |`LogManager` |Предоставляет _менеджера_ для работы с журналом работы приложения.
 |`ProfileManager` |Предоставляет _менеджера_ пользовательских профилей.
 |`xref:UserSession.Properties_PR.adoc[Properties]` |Возвращает коллекцию параметров пользовательской сессии.
-|`xref:UserSession.ReportManager_PR.adoc[ReportManager]` |Предоставляет _менеджер_ для работы с хранимыми процедурами (отчетами).
+|`xref:UserSession.ReportManager_PR.adoc[ReportManager]` |Предоставляет _менеджер_ для работы с хранимыми процедурами (отчётами).
 |===
 
 == Методы
