--- a/modules/appendix/pages/webservice/misc/ReportGetData.adoc
+++ b/modules/appendix/pages/webservice/misc/ReportGetData.adoc
@@ -1,6 +1,6 @@
 = ReportGetData
 
-Получает результат выполнения отчета.
+Получает результат выполнения отчёта.
 
 == Запрос
 
@@ -28,9 +28,9 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Rep
 sessionId:::
 Идентификатор пользовательской сессии
 reportId:::
-Идентификатор отчета
+Идентификатор отчёта
 paramsData:::
-Параметры выполнения отчета
+Параметры выполнения отчёта
 
 Строка `paramsData` должна соответствовать формату элемента `MethodCall`, приведенному в схеме `ServerRequests.xsd`:
 
