--- a/modules/appendix/pages/webservice/misc/ReportGetInfo.adoc
+++ b/modules/appendix/pages/webservice/misc/ReportGetInfo.adoc
@@ -1,6 +1,6 @@
 = ReportGetInfo
 
-Возвращает список параметров отчета.
+Возвращает список параметров отчёта.
 
 == Запрос
 
@@ -27,7 +27,7 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Rep
 sessionId:::
 Идентификатор пользовательской сессии
 reportId:::
-Идентификатор отчета
+Идентификатор отчёта
 
 == Ответ
 
@@ -47,4 +47,4 @@ Content-Length: length
 </soap:Envelope>
 ----
 
-Ответ содержит список параметров отчета и их тип.
+Ответ содержит список параметров отчёта и их тип.
