--- a/modules/appendix/pages/webservice/misc/ReportGetList.adoc
+++ b/modules/appendix/pages/webservice/misc/ReportGetList.adoc
@@ -1,6 +1,6 @@
 = ReportGetList
 
-Возвращает список всех отчетов.
+Возвращает список всех отчётов.
 
 == Запрос
 
@@ -44,7 +44,7 @@ Content-Length: length
 </soap:Envelope>
 ----
 
-В ответ включается список параметров каждого отчета и тип этих параметров.
+В ответ включается список параметров каждого отчёта и тип этих параметров.
 
 == Пример запроса
 
