--- a/modules/schemas/pages/release/BackOffice/CardTask.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTask.adoc
@@ -44,7 +44,7 @@
 
 |`CompletedUser` |Сотрудник, завершивший задание. |`refid` | |
 |`RejectedUser` |Сотрудник, отклонивший задание. |`refid` | |
-|`Report` |Отчет |`unitext` | |
+|`Report` |Отчёт |`unitext` | |
 |`IsOverdue` |Завершено позже срока |`bool` | |
 |`PercentCompleted` |Процент завершения (%) |`int` | |
 |`DurationActual` |Длительность фактическая (ч) |`int` | |
@@ -394,7 +394,7 @@
 * Не завершать = 0.
 * Завершать = 1.
 * На усмотрение пользователя = 2.
-|`ReportRequired` |Ввести отчет |`bool` | |
+|`ReportRequired` |Ввести отчёт |`bool` | |
 |`CompleteChildrenTaskGroups` |Завершать подчинённые группы заданий |`bool` | |
 |`RecallChildrenMode` |Поведение подчинённых заданий при отзыве |`enum` | a|.Значения:
 * Не менять = 0.
