--- a/modules/schemas/pages/release/BackOffice/CardTaskGroup.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTaskGroup.adoc
@@ -133,7 +133,7 @@
 |`DelegateToDeputy` |Разрешить делегирование заместителю при неактивности исполнителя |`bool` | |
 |`SeparateTasks` |Создавать отдельное задание для каждого сотрудника |`bool` | |
 |`ReportFileRequired` |Запрашивать файл отчёта |`bool` | |
-|`ReportRequired` |Ввести отчет |`bool` | |
+|`ReportRequired` |Ввести отчёт |`bool` | |
 |`RoutingType` |Маршрутизация |`enum` | a|.Значения:
 * По умолчанию = 0.
 * Онлайн задание = 1.
