--- a/modules/schemas/pages/release/TakeOffice/CardReport.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardReport.adoc
@@ -1,8 +1,8 @@
-= Отчет
+= Отчёт
 
 * Идентификатор: `52F3DB4D-C3D4-4C03-BFF2-D8CFDC6E6CFC
 * Псевдоним: `CardReport`
-* Название: _Отчет_
+* Название: _Отчёт_
 
 == Секции карточки
 
@@ -18,7 +18,7 @@
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Тема |`unistring` |544 |
-|`Type` |Вид отчета |`refid` | a|.Поля ссылки:
+|`Type` |Вид отчёта |`refid` | a|.Поля ссылки:
 * `DocType_Name > Name`
 |`CreatedBy` |Автор |`refid` | a|.Поля ссылки:
 * `Create_FName > FirstName`
@@ -26,7 +26,7 @@
 * `Create_LName > LastName`
 * `Create_Email > Email`
 |`CreationDate` |Дата создания |`datetime` | |
-|`ReportState` |Состояние отчета |`enum` | a|.Значения:
+|`ReportState` |Состояние отчёта |`enum` | a|.Значения:
 * Ошибка = -1.
 * Не активен = 0.
 * К контролю = 1.
@@ -47,7 +47,7 @@
 Идентификатор секции: `3F8270DB-3603-463C-BA59-26B89EBB6CB5`
 
 |`Comments` |Содержание |`unitext` | |
-|`ReportFilesID` |Файлы отчета |`refcardid` | a|
+|`ReportFilesID` |Файлы отчёта |`refcardid` | a|
 Идентификатор типа: `BFC9D190-BCD6-411A-B9F9-3160D3F68819`
 
 Идентификатор секции: `3F8270DB-3603-463C-BA59-26B89EBB6CB5`
@@ -68,7 +68,7 @@
 * `Cons_MName > MiddleName`
 |`Confidential` |Конфиденциально |`bool` | |
 |`ChangeDate` |Дата последнего изменения |`datetime` | |
-|`ReportTaskID` |Задание отчета |`refcardid` | a|
+|`ReportTaskID` |Задание отчёта |`refcardid` | a|
 Идентификатор типа: `F7E2090A-EEC3-4B51-B1BB-567D4A0117D6`
 
 Идентификатор секции: `7213A125-2CA4-40EE-A671-B52850F45E7D`
@@ -103,14 +103,14 @@
 |`RefFolderID` |Ссылка на папку |`refid` | |
 |===
 
-=== Секция "Ссылки отчета"
+=== Секция "Ссылки отчёта"
 
 * Идентификатор: `9C69595A-D02D-451B-BC9E-1FCCC508CEC8`
 * Псевдоним: `ReportReferences`
-* Название: _Ссылки отчета_
+* Название: _Ссылки отчёта_
 * Тип секции: `coll`
 
-.Поля секции "Ссылки отчета"
+.Поля секции "Ссылки отчёта"
 [cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
@@ -175,7 +175,7 @@
 * `> FirstName`
 * `> MiddleName`
 |`Comment` |Комментарий |`unistring` |2048 |
-|`IsReport` |Отчет |`bool` | |
+|`IsReport` |Отчёт |`bool` | |
 |===
 
 === Секция "Свойства"
