--- a/modules/schemas/pages/release/TakeOffice/CardResolution.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardResolution.adoc
@@ -174,7 +174,7 @@
 |`CanReject` |разрешён отказ |`bool` | |
 |`CanReschedule` |разрешён перенос сроков |`bool` | |
 |`CanAddFiles` |Разрешено добавление файлов |`bool` | |
-|`IsReportNeeded` |Требуется составить отчет |`bool` | |
+|`IsReportNeeded` |Требуется составить отчёт |`bool` | |
 |`CanOpenParent` |Разрешить открытие родительской карточки |`bool` | |
 |`IsAddFileNeeded` |Необходимо добавить файл |`bool` | |
 |`CanViewLog` |Право просмотра журнала |`bool` | |
@@ -192,7 +192,7 @@
 
 Идентификатор секции: `7213A125-2CA4-40EE-A671-B52850F45E7D`
 
-|`ReportCardRequired` |Необходим детальный отчет |`bool` | |
+|`ReportCardRequired` |Необходим детальный отчёт |`bool` | |
 |`PerformerName` |Имя исполнителя |`unistring` |256 |
 |`ToRead` |Только к ознакомлению |`bool` | |
 |`StartDateParam` |Параметр даты начала |`string` |64 |
@@ -398,7 +398,7 @@
 |`CanReschedule` |Исполнителю разрешён перенос сроков |`bool` | |
 |`ControllerCanReschedule` |Ответственному исполнителю разрешён перенос сроков |`bool` | |
 |`CanAddFiles` |Разрешено добавление файлов |`bool` | |
-|`IsReportNeeded` |Требуется составить отчет |`bool` | |
+|`IsReportNeeded` |Требуется составить отчёт |`bool` | |
 |`SendImmediately` |Отправлять немедленно |`bool` | |
 |`ToRead` |Только к ознакомлению |`bool` | |
 |`SendAndFinish` |Завершать после отправки |`bool` | |
@@ -406,7 +406,7 @@
 |`IsAddFileNeeded` |Необходимо добавить файл |`bool` | |
 |`CanViewLog` |Право просмотра истории исполнения |`bool` | |
 |`Reminder` |Напоминать за (час) |`int` | |
-|`ReportCardRequired` |Создавать детальный отчет |`bool` | |
+|`ReportCardRequired` |Создавать детальный отчёт |`bool` | |
 |`DelegateToAll` |Делегировать любому сотруднику |`bool` | |
 |`DelegateToDeputies` |Делегировать заместителям |`bool` | |
 |`NotifyChildCompletion` |Уведомлять авторов подчиненных задач об их завершении |`bool` | |
