--- a/modules/schemas/pages/release/TakeOffice/RefTypes.adoc
+++ b/modules/schemas/pages/release/TakeOffice/RefTypes.adoc
@@ -22,7 +22,7 @@
 * Вид документа = 0.
 * Вид задания = 1.
 * Вид задачи = 2.
-* Вид отчета = 3.
+* Вид отчёта = 3.
 * Вид доставки = 4.
 * Состояние документа = 5.
 * Вид согласования = 6.
@@ -340,7 +340,7 @@
 * Ход исполнения = 8.
 * Файлы и ссылки задания = 9.
 * Подчиненные задачи = 10.
-* Отчет задания = 11.
+* Отчёт задания = 11.
 * Свойства задания = 12.
 |`Hidden` |Скрытое поле |`bool` | |
 |`ReadOnly` |Только для чтения |`bool` | |
