--- a/modules/schemas/pages/standard-card-fields.adoc
+++ b/modules/schemas/pages/standard-card-fields.adoc
@@ -57,7 +57,7 @@
 |xref:release/TakeOffice/CardOut.adoc[Исходящий документ]
 |xref:release/TakeOffice/CardFile.adoc[Карточка файла]
 |xref:release/TakeOffice/AgentSettings.adoc[Настройки помощника]
-|xref:release/TakeOffice/CardReport.adoc[Отчет]
+|xref:release/TakeOffice/CardReport.adoc[Отчёт]
 |xref:release/TakeOffice/NavExtensions.adoc[Расширения навигатора]
 |xref:release/TakeOffice/CardApproval.adoc[Согласование]
 |xref:release/TakeOffice/CardMessage.adoc[Сообщение]
