--- a/modules/views/pages/event-logs.adoc
+++ b/modules/views/pages/event-logs.adoc
@@ -38,7 +38,7 @@
 ** Изменение прав доступа к карточке.
 ** Изменение прав доступа к файлу.
 ** Изменение прав доступа к элементу.
-** Изменение прав доступа к отчету.
+** Изменение прав доступа к отчёту.
 ** Изменение прав доступа к типам карточек.
 * Операции с файлами:
 ** Создание файла.
