--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AcceptTask_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AcceptTask_MT.adoc
@@ -1,6 +1,6 @@
 = ITaskService.AcceptTask -- метод (Task)
 
-Приемка указанного задания.
+приёмка указанного задания.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
