Буква ё и двойные пробелы

--- a/modules/BackOffice-ObjectModel-Services-ITaskListService/pages/ITaskListService.CreateTask_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskListService/pages/ITaskListService.CreateTask_MT.adoc
@@ -31,7 +31,7 @@ onControl:::
 controller:::
 Тип: `xref:BackOffice-ObjectModel-Staff:StaffEmployee_CL.adoc[StaffEmployee]`
 +
-Контролер задания, если `onControl` = `true`
+Контролёр задания, если `onControl` = `true`
 
 Возвращаемое значение::
 Тип: `xref:BackOffice-ObjectModel-Task:TaskListTask_CL.adoc[TaskListTask]`
