--- a/modules/BackOffice-ObjectModel-Task/pages/TaskGroup_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/TaskGroup_CL.adoc
@@ -43,7 +43,7 @@ public sealed class TaskGroup : BaseCard
 |`SendToPerformanceOperation` |Операция перехода "Отправить на исполнение".
 |`SetAuthorOperation` |Операция редактирования "Редактирование автора".
 |`SetContentOperation` |Операция редактирования "Редактирование содержания".
-|`SetControllerOperation` |Операция редактирования "Редактирование контролера".
+|`SetControllerOperation` |Операция редактирования "Редактирование контролёра".
 |`SetPriorityOperation` |Операция редактирования "Установить важность".
 |`SetRoutingTypeOperation` |Операция редактирования "Установить тип маршрутизации".
 |===
