--- a/modules/BackOffice-ObjectModel-Task/pages/TaskListTask_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/TaskListTask_CL.adoc
@@ -17,7 +17,7 @@ public class TaskListTask : BaseCardSectionRow
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`Controller` |Задаёт или возвращает сотрудника, выполняющего роль контролера задания.
+|`Controller` |Задаёт или возвращает сотрудника, выполняющего роль контролёра задания.
 |`OnControl` |Задаёт или возвращает признак того, что задание на контроле.
 |`Task` |Задаёт или возвращает задание.
 |===
