--- a/modules/BackOffice-ObjectModel-Task/pages/Task_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Task/pages/Task_CL.adoc
@@ -111,7 +111,7 @@ public class Task : BaseCard
 |`SelectPerformerOperation` |Операция выбора исполнителя.
 |`SetAuthorOperation` |Операция редактирования автора.
 |`SetContentOperation` |Операция редактирования содержания.
-|`SetControllerOperation` |Операция редактирования контролера.
+|`SetControllerOperation` |Операция редактирования контролёра.
 |`SetPriorityOperation` |Операция установки важности.
 |`StartedState` |Представляет состояние "Начато".
 |`StopExecutionOperation` |Операция прекращения исполнения.
