--- a/modules/schemas/pages/release/BackOffice/CardDocument.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardDocument.adoc
@@ -419,7 +419,7 @@
 |`ControlTypeId` |Идентификатор контроля |`refid` | |
 |`ControlDate` |Дата контроля |`datetime` | |
 |`StopControlDate` |Дата снятия с контроля |`datetime` | |
-|`DocumentInspectorId` |Идентификатор контролер |`refid` | |
+|`DocumentInspectorId` |Идентификатор контролёр |`refid` | |
 |`StopControlPersonId` |Сотрудник снявший с контроля |`refid` | |
 |===
 
