--- a/modules/schemas/pages/release/BackOffice/CardTask.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTask.adoc
@@ -49,7 +49,7 @@
 |`PercentCompleted` |Процент завершения (%) |`int` | |
 |`DurationActual` |Длительность фактическая (ч) |`int` | |
 |`OnControl` |На контроле |`bool` | |
-|`Controller` |Контролер хода исполнения задания |`refid` | |
+|`Controller` |Контролёр хода исполнения задания |`refid` | |
 |`ControlDate` |Дата контроля |`datetime` | |
 |`RequiresAcceptance` |Требуется приёмка |`bool` | |
 |`ExecutionStopped` |Прекращено исполнение |`bool` | |
