--- a/modules/schemas/pages/release/BackOffice/CardTaskGroup.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTaskGroup.adoc
@@ -66,7 +66,7 @@
 * Нормальная = 2.
 * Высокая = 3.
 |`OnControl` |На контроле |`bool` | |
-|`Controller` |Контролер |`refid` | |
+|`Controller` |Контролёр |`refid` | |
 |`ControlDate` |Дата контроля |`datetime` | |
 |`RequiresAcceptance` |Требуется приёмка |`bool` | |
 |`ResponsiblePerformer` |Ответственный исполнитель |`refid` | |
