--- a/modules/schemas/pages/release/TakeOffice/CardInc.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardInc.adoc
@@ -77,7 +77,7 @@
 |`Confidential` |Конфиденциально |`bool` | |
 |`DocProperty` |Реквизит документа |`unistring` |128 |
 |`BarcodeNumber` |Номер штрих-кода |`string` |32 |
-|`ControlledBy` |Контролер |`refid` | a|.Поля ссылки:
+|`ControlledBy` |Контролёр |`refid` | a|.Поля ссылки:
 * `Control_FName > FirstName`
 * `Control_MName > MiddleName`
 * `Control_LName > LastName`
