--- a/modules/schemas/pages/release/TakeOffice/CardOut.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardOut.adoc
@@ -63,7 +63,7 @@
 |`DocProperty` |Реквизит документа |`unistring` |128 |
 |`BarcodeNumber` |Номер штрих-кода |`string` |32 |
 |`NotCopyIncNumber` |Не копировать входящий номер |`bool` | |
-|`ControlledBy` |Контролер |`refid` | a|.Поля ссылки:
+|`ControlledBy` |Контролёр |`refid` | a|.Поля ссылки:
 * `Control_FName > FirstName`
 * `Control_MName > MiddleName`
 * `Control_LName > LastName`
