--- a/modules/schemas/pages/release/TakeOffice/CardReport.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardReport.adoc
@@ -58,7 +58,7 @@
 |`ApprovalDate` |Дата согласования |`datetime` | |
 |`ConsolidationDate` |Дата утверждения |`datetime` | |
 |`ActualDate` |Фактический срок сдачи |`datetime` | |
-|`ControlledBy` |Контролер |`refid` | a|.Поля ссылки:
+|`ControlledBy` |Контролёр |`refid` | a|.Поля ссылки:
 * `Contr_LName > LastName`
 * `Contr_FName > FirstName`
 * `Contr_MName > MiddleName`
