--- a/modules/schemas/pages/release/TakeOffice/CardResolution.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardResolution.adoc
@@ -30,12 +30,12 @@
 * `Register_MName > MiddleName`
 * `Register_LName > LastName`
 |`SignedDate` |Дата подписания |`datetime` | |
-|`ControlledBy` |Контролер |`refid` | a|.Поля ссылки:
+|`ControlledBy` |Контролёр |`refid` | a|.Поля ссылки:
 * `Control_FName > FirstName`
 * `Control_MName > MiddleName`
 * `Control_LName > LastName`
 * `Control_Email > Email`
-|`ControllerRoutingType` |Тип маршрутизации для контролера |`enum` | a|.Значения:
+|`ControllerRoutingType` |Тип маршрутизации для контролёра |`enum` | a|.Значения:
 * По умолчанию = 0.
 * Письмо с вложениями = 1.
 * Задача Outlook = 2.
@@ -187,7 +187,7 @@
 
 Идентификатор секции: `7213A125-2CA4-40EE-A671-B52850F45E7D`
 
-|`ControllerTaskID` |Задание контролера |`refcardid` | a|
+|`ControllerTaskID` |Задание контролёра |`refcardid` | a|
 Идентификатор типа: `F7E2090A-EEC3-4B51-B1BB-567D4A0117D6`
 
 Идентификатор секции: `7213A125-2CA4-40EE-A671-B52850F45E7D`
@@ -412,7 +412,7 @@
 |`NotifyChildCompletion` |Уведомлять авторов подчиненных задач об их завершении |`bool` | |
 |`NotifyAllResolutions` |Уведомить авторов подчиненных задач после завершения последней из них |`bool` | |
 |`CanDeleteFiles` |Разрешено удаление файлов |`bool` | |
-|`AuthorCanReschedule` |Контролеру разрешён перенос сроков |`bool` | |
+|`AuthorCanReschedule` |Контролёру разрешён перенос сроков |`bool` | |
 |===
 
 === Секция "Виды документов"
@@ -479,7 +479,7 @@
 * Завершение задания = 6.
 * Завершение задания контроля = 7.
 * Изменение сроков исполнения = 8.
-* Назначение контролером задачи = 9.
+* Назначение контролёром задачи = 9.
 * Начало исполнения задачи = 10.
 |`EmployeeType` |Тип сотрудника |`enum` | a|.Значения:
 * Регистратор = 0.
@@ -487,7 +487,7 @@
 * Исполнитель = 2.
 * Ответственный исполнитель = 3.
 * Подписал = 4.
-* Контролер = 5.
+* Контролёр = 5.
 * Контролируемый исполнитель = 6.
 * Руководитель автора = 7.
 |`Comments` |Текст сообщения |`unistring` |3900 |
