--- a/modules/schemas/pages/release/TakeOffice/RefTypes.adoc
+++ b/modules/schemas/pages/release/TakeOffice/RefTypes.adoc
@@ -226,7 +226,7 @@
 * Исполнители (исключая ответственного) = 2.
 * Автор = 3.
 * Согласующие лица = 4.
-* Контролер = 5.
+* Контролёр = 5.
 * Получатели (включая ответственного) = 6.
 * Исполнители (включая ответственного) = 7.
 * Ответственный получатель = 8.
@@ -531,7 +531,7 @@
 * Исполнитель = 2.
 * Ответственный исполнитель = 3.
 * Подписал = 4.
-* Контролер = 5.
+* Контролёр = 5.
 * Контролируемый исполнитель = 6.
 * Руководитель автора = 7.
 |`Comments` |Текст сообщения |`unistring` |3900 |
