--- a/modules/schemas/pages/release/TakeOffice/CardOrd.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardOrd.adoc
@@ -68,7 +68,7 @@
 |`DocProperty` |Реквизит документа |`unistring` |128 |
 |`BarcodeNumber` |Номер штрих-кода |`string` |32 |
 |`RespRecipient` |Ответственный получатель |`refid` | |
-|`ControlledBy` |Контролер |`refid` | a|.Поля ссылки:
+|`ControlledBy` |Контролёр |`refid` | a|.Поля ссылки:
 * `Control_FName > FirstName`
 * `Control_MName > MiddleName`
 * `Control_LName > LastName`
