--- a/modules/schemas/pages/release/TakeOffice/WorkflowTask.adoc
+++ b/modules/schemas/pages/release/TakeOffice/WorkflowTask.adoc
@@ -66,7 +66,7 @@
 
 |`SettingsStartDate` |Дата начала в настройках |`datetime` | |
 |`SettingsEndDate` |Дата окончания в настройках |`datetime` | |
-|`TaskController` |Контролер задания |`refid` | a|.Поля ссылки:
+|`TaskController` |Контролёр задания |`refid` | a|.Поля ссылки:
 * `TCo_LastName > LastName`
 * `TCo_FirstName > FirstName`
 * `TCo_MiddleName > MiddleName`
@@ -96,7 +96,7 @@
 
 Идентификатор секции: `3F8270DB-3603-463C-BA59-26B89EBB6CB5`
 
-|`IsControllerTask` |Задание контролера задачи |`bool` | |
+|`IsControllerTask` |Задание контролёра задачи |`bool` | |
 |`ParentApprovalID` |Родительское согласование |`refcardid` | a|
 Идентификатор типа: `A231269C-6126-4C1A-9758-F55FF9571EF8`
 
@@ -159,7 +159,7 @@
 |`PercentCompleted` |Процент исполнения |`int` | |
 |`PercentCompletedPID` |Параметр процента исполнения |`refid` | |
 |`ExecutionStarted` |Начато исполнение |`bool` | |
-|`ControllerShortcutID` |Ярлык контролера |`refid` | |
+|`ControllerShortcutID` |Ярлык контролёра |`refid` | |
 |`DelegatedTo` |Делегировано к |`refid` | |
 |`ReturnReason` |Причина возврата |`enum` | a|.Значения:
 * Нормальный возврат = 0.
@@ -231,7 +231,7 @@
 |`CanDeleteDocuments` |Право удаления документов |`bool` | |
 |`SendAsHTMl` |Отправлять письмо как HTMl` |`bool` | |
 |`UseCalendar` |Использовать календарь исполнителя |`bool` | |
-|`AuthorCanReschedule` |Право изменения сроков контролером задания |`bool` | |
+|`AuthorCanReschedule` |Право изменения сроков контролёром задания |`bool` | |
 |`WorkDurationRequired` |Необходимо заполнение трудоемкости |`bool` | |
 |===
 
